--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
-        context: ./src
+        context: .
         file: Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository }}:${{ github.event.pull_request.head.sha || github.sha }}
