--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -26,6 +26,12 @@ jobs:
         npm install
         npm run build --if-present
         npm run test --if-present
+
+  build-container:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
